
export const tarefasDomesticas = [
    { id: '1', icon: '🛌', title: 'Trocar lençóis', frequency: 'A cada 7 dias' },
    { id: '2', icon: '🛁', title: 'Lavar toalhas', frequency: 'A cada 3 dias' },
    { id: '3', icon: '🚽', title: 'Limpar banheiro', frequency: 'Semanalmente' },
    { id: '4', icon: '🍳', title: 'Limpar cozinha', frequency: 'Semanalmente' },
    { id: '5', icon: '🧊', title: 'Limpar geladeira', frequency: 'Mensalmente' },
    { id: '6', icon: '🔥', title: 'Limpar forno', frequency: 'Mensalmente' },
    { id: '7', icon: '🧹', title: 'Limpar pisos', frequency: 'Semanalmente' },
    { id: '8', icon: '🪟', title: 'Limpar janelas', frequency: 'Mensalmente' },
  ];
  
 
  export const dicasEssenciais = [
    {
      title: 'Economia',
      data: [
        { id: 'e1', icon: '💲', text: 'Crie um orçamento' },
        { id: 'e2', icon: '💡', text: 'Use lâmpadas de LED' },
        { id: 'e3', icon: '🔌', text: 'Desligue aparelhos da tomada' },
        { id: 'e4', icon: '💧', text: 'Economize água' },
      ],
    },
    {
      title: 'Limpeza',
      data: [
        { id: 'l1', icon: '🧼', text: 'Use vinagre e bicarbonato para limpar' },
        { id: 'l2', icon: '🧹', text: 'Varra e aspire regularmente' },
        { id: 'l3', icon: '♻️', text: 'Separe o lixo para reciclagem' },
      ],
    },
    {
      title: 'Cozinha',
      data: [
        { id: 'c1', icon: '🍲', text: 'Planeje suas refeições' },
        { id: 'c2', icon: '🛒', text: 'Cozinhe em grandes quantidades' },
      ],
    },
  ];