...
    });
  }

  return (
    <SafeAreaView style={styles.container}>
      <View style={styles.header}>
        <Text style={styles.headerTitle}>Sobreviva Fácil</Text>
        <TouchableOpacity onPress={handleOpenSettings}>
          <Ionicons name="settings-outline" size={24} color={Colors.light.icon} />
        </TouchableOpacity>
      </View>

      <View style={styles.content}>
...
