...
    }
  }, [params.highlightedCategory]);

  return (
    <SafeAreaView style={styles.container}>
      <Stack.Screen options={{ 
          headerTitle: 'Dicas Essenciais',
          headerLargeTitle: true,
          headerStyle: { backgroundColor: Colors.light.background },
          headerShadowVisible: false,
      }} />
      <SectionList
        ref={sectionListRef}
...
