appId: host.exp.exponent
---


- tapOn: "Rotina"
- assertVisible: "Tarefas Domésticas"

- tapOn: "Limpar banheiro"
- assertVisible:
    text: "Limpar banheiro"

- tapOn: "Home"

- tapOn: "Rotina"
- assertVisible:
    text: "Limpar banheiro"   