appId: host.exp.exponent
---

- assertVisible: "Rotina"
- tapOn: "Rotina"
- assertVisible: "Tarefas Domésticas"

- tapOn: "Dicas"
- assertVisible: "Dicas"

- tapOn: "Home"
- assertVisible: "Sobreviva Fácil"

