appId: host.exp.exponent
---


- tapOn: "Dicas"
- assertVisible: "Dicas Essenciais"

- scroll

- assertVisible: "Cozinha"